pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 1235
      protocol: TCP
      targetPort: 4000
