pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-logoutput-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-pingpong-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 1234
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 1234
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pingpong-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
